--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,8 @@ jobs:
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
-          git checkout refs/heads/test
+          git fetch --all
+          git checkout -b test origin/test
           git merge --no-ff origin/dev -m "Auto-merge dev to test"
           git push origin test
 
