--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,7 +20,16 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git checkout main
+          
+          # Check if main branch exists, create it if not
+          if git ls-remote --heads origin main | grep main; then
+            echo "Branch main exists, checking out"
+            git checkout main
+          else
+            echo "Branch main does not exist, creating it"
+            git checkout -b main
+          fi
+          
           git merge test
           git push origin main
 
