--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,12 +11,23 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Merge dev to test
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git checkout test
+          
+          # Check if test branch exists, create it if not
+          if git ls-remote --heads origin test | grep test; then
+            echo "Branch test exists, checking out"
+            git checkout test
+          else
+            echo "Branch test does not exist, creating it"
+            git checkout -b test
+          fi
+          
           git merge dev
           git push origin test
 
