--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,39 +14,51 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          fetch-depth: 0  # To fetch all tags
+          fetch-depth: 0  # Needed to fetch all history and tags
 
-      - name: Merge test to main
+      - name: Setup Git identity
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          
-          # Check if main branch exists, create it if not
-          if git ls-remote --heads origin main | grep main; then
-            echo "Branch main exists, checking out"
-            git checkout main
+
+      - name: Fetch branches
+        run: |
+          git fetch origin test
+          git fetch origin main || echo "Main branch doesn't exist yet"
+
+      - name: Merge test into main
+        run: |
+          # Checkout main from remote if exists, or create new one
+          if git show-ref --quiet refs/remotes/origin/main; then
+            git checkout -B main origin/main
           else
-            echo "Branch main does not exist, creating it"
             git checkout -b main
           fi
-          
-          git merge test
+
+          # Merge test into main
+          if ! git merge origin/test --no-commit; then
+            echo "Merge conflict detected, resolving in favor of test branch changes"
+            git checkout --theirs .
+            git add .
+          fi
+
+          git commit -m "Merge test into main" || echo "No changes to commit"
           git push origin main
 
       - name: Create new tag
         run: |
-          # Get the latest tag
+          # Get latest tag or default to v0.0.0
           LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
-          
-          # Extract version components
-          MAJOR=$(echo $LATEST_TAG | sed -E 's/v([0-9]+)\.([0-9]+)\.([0-9]+)/\1/')
-          MINOR=$(echo $LATEST_TAG | sed -E 's/v([0-9]+)\.([0-9]+)\.([0-9]+)/\2/')
-          PATCH=$(echo $LATEST_TAG | sed -E 's/v([0-9]+)\.([0-9]+)\.([0-9]+)/\3/')
-          
+
+          # Extract version numbers
+          MAJOR=$(echo "$LATEST_TAG" | cut -d. -f1 | sed 's/v//')
+          MINOR=$(echo "$LATEST_TAG" | cut -d. -f2)
+          PATCH=$(echo "$LATEST_TAG" | cut -d. -f3)
+
           # Increment patch version
           PATCH=$((PATCH + 1))
-          
-          # Create new tag
-          NEW_TAG="v0.$MINOR.$PATCH"
-          git tag -a "$NEW_TAG" -m "New release $NEW_TAG"
-          git push origin --tags
+          NEW_TAG="v$MAJOR.$MINOR.$PATCH"
+
+          # Create tag
+          git tag -a "$NEW_TAG" -m "Release $NEW_TAG"
+          git push origin "$NEW_TAG"
