--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,14 +28,14 @@ jobs:
 
       - name: Merge test into main
         run: |
-          # Checkout main from remote if exists, or create new one
+          # Checkout ou créer la branche main
           if git show-ref --quiet refs/remotes/origin/main; then
             git checkout -B main origin/main
           else
             git checkout -b main
           fi
 
-          # Merge test into main
+          # Merge test dans main
           if ! git merge origin/test --no-commit; then
             echo "Merge conflict detected, resolving in favor of test branch changes"
             git checkout --theirs .
@@ -43,9 +43,13 @@ jobs:
           fi
 
           git commit -m "Merge test into main" || echo "No changes to commit"
+
+      - name: Push to origin/main
+        run: |
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git push origin main
 
-      - name: Create new tag
+      - name: Create and push new tag
         run: |
           # Get latest tag or default to v0.0.0
           LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
@@ -61,4 +65,7 @@ jobs:
 
           # Create tag
           git tag -a "$NEW_TAG" -m "Release $NEW_TAG"
+
+          # Auth and push
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git push origin "$NEW_TAG"
