--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,14 +32,14 @@ jobs:
 
       - name: Merge test into main
         run: |
-          # Checkout ou créer la branche main
+          # Checkout or create main branch
           if git show-ref --quiet refs/remotes/origin/main; then
             git checkout -B main origin/main
           else
             git checkout -b main
           fi
 
-          # Merge test dans main
+          # Merge test into main
           if ! git merge origin/test --no-commit; then
             echo "Merge conflict detected, resolving in favor of test branch changes"
             git checkout --theirs .
@@ -47,7 +47,7 @@ jobs:
           fi
 
           git commit -m "Merge test into main" || echo "No changes to commit"
-          # Vérifier s'il y a des modifications à pousser
+          # Check if there are changes to push
           git diff --quiet origin/main HEAD || git_has_changes=true
 
       - name: Push to origin/main
